--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: image, local: true) do |form| %>
+<%= form_with(model: image, local: true, multipart: true) do |form| %>
   <% if image.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(image.errors.count, "error") %> prohibited this image from being saved:</h2>
@@ -10,6 +10,7 @@
       </ul>
     </div>
   <% end %>
+  <%= form.file_field :content %>
 
   <div class="actions">
     <%= form.submit %>
