--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -5,14 +5,16 @@
 <table>
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @images.each do |image| %>
       <tr>
-        <td><%= link_to 'Show', image %></td>
+        <td>
+          <%= link_to image.id, image %>
+        </td>
       </tr>
     <% end %>
   </tbody>
