--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -13,7 +13,9 @@
     <% @images.each do |image| %>
       <tr>
         <td>
-          <%= link_to image.id, image %>
+          <%= link_to image_path(image) do %>
+            <%= image_tag(url_for(image.content), size: '200x200') %>
+          <% end %>
         </td>
       </tr>
     <% end %>
