--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -13,7 +13,7 @@
     <% @images.each do |image| %>
       <tr>
         <td>
-          <%= link_to image_path(image) do %>
+          <%= link_to image_path(image.slug) do %>
             <%= image_tag(url_for(image.thumbnail), size: '200x200') %>
           <% end %>
         </td>
