--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,4 +1,4 @@
 <p id="notice"><%= notice %></p>
 
-<%= image_tag(url_for(@image.content), size: '600x600') %>
+<%= image_tag(url_for(@image.thumbnail), size: '600x600') %>
 <%= link_to 'Back', images_path %>
