--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LgtmTukuru</title>
+    <title>LGTMツクール</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <header class="l-header nav">
+      <h1 class="u-title"><%= link_to 'LGTMツクール', root_path %></h1>
+      <div><%= link_to 'ツクル', new_image_path %></div>
+    </header>
+    <main class="l-container">
     <%= yield %>
+    </main>
+    <footer class="l-footer">
+      created by <a href="https://twitter.com/otukutun/" target="_blank">@otukutun</a>
+    </footer>
   </body>
 </html>
