--- a/app/assets/stylesheets/_body.scss
+++ b/app/assets/stylesheets/_body.scss
@@ -20,3 +20,14 @@ main h1 {
   justify-content: space-between;
   line-height: 30px;
 }
+
+.image-list-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  margin-bottom: 20px;
+
+  .image-container {
+    margin: 5px;
+  }
+}
