--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,22 +1,10 @@
 <p id="notice"><%= notice %></p>
-<table>
-  <thead>
-    <tr>
-      <th colspan="2"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @images.each do |image| %>
-      <tr>
-        <td>
-          <%= link_to image_path(image.slug) do %>
-            <%= image_tag(url_for(image.thumbnail), size: '200x200') %>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+<div class="image-list-container">
+  <% @images.each do |image| %>
+    <div class="image-container">
+      <%= link_to image_path(image.slug) do %>
+        <%= image_tag(url_for(image.thumbnail), size: '200x200') %>
+      <% end %>
+    </div>
+  <% end %>
+</div>
