Add image container style.

--- a/app/assets/stylesheets/_body.scss
+++ b/app/assets/stylesheets/_body.scss
@@ -15,6 +15,13 @@ main h1 {
   font-size: 25px;
 }
 
+img {
+  max-width: 600px;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
 .nav {
   display: flex;
   justify-content: space-between;
@@ -28,6 +35,12 @@ main h1 {
   margin-bottom: 20px;
 
   .image-container {
+    max-width: 250px;
     margin: 5px;
   }
+}
+
+.image-container {
+  display: flex;
+  justify-content: center;
 }
