--- a/app/assets/stylesheets/_body.scss
+++ b/app/assets/stylesheets/_body.scss
@@ -40,7 +40,9 @@ img {
   }
 }
 
-.image-container {
-  display: flex;
-  justify-content: center;
+.markdown-container {
+  margin-top: 10px;
+  input {
+    width: 300px;
+  }
 }
