--- a/app/assets/stylesheets/_body.scss
+++ b/app/assets/stylesheets/_body.scss
@@ -1,3 +1,8 @@
+html {
+  min-height: 100%;
+  position: relative;
+}
+
 body {
   font-family: "M PLUS Rounded 1c";
 }
@@ -36,6 +41,7 @@ img {
 
   .image-container {
     max-width: 250px;
+    max-height: 250px;
     margin: 5px;
   }
 }
