--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= csp_meta_tag %>
 
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/3.0.1/github-markdown.min.css"  rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -20,7 +21,12 @@
     <%= yield %>
     </main>
     <footer class="l-footer">
-      created by <a href="https://twitter.com/otukutun/" target="_blank">@otukutun</a>
+      <div class="creator">
+        created by <a href="https://twitter.com/otukutun/" target="_blank">@otukutun</a>
+      </div>
+      <div class="doc-link">
+        <%= link_to 'APIドキュメント', docs_api_path %>
+      </div>
     </footer>
   </body>
 </html>
