Use cloudfront url.

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -7,5 +7,5 @@
   <p>Markdown</p>
 </div>
 <div class="l-center markdown-container">
-  <input type="text" value="![LGTM](<%= polymorphic_url(@image.lgtm) %>)"/>
+  <input type="text" value="![LGTM](<%= @image.lgtm_cloudfront_url %>)"/>
 </div>
