--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-  <%= form.file_field :content %>
+  <%= form.file_field :file %>
 
   <div class="actions">
     <%= form.submit %>
